[package]
name = "bananatype"
version = "0.1.0"
authors = ["Mikhail <mikhailethanram@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
crossterm = "0.22.1"
tui = {version = "0.16", default-features = false, features = ['crossterm']}
rand = "0.8.3"